[gd_scene load_steps=11 format=3 uid="uid://lhmipeci2e24"]

[ext_resource type="Script" uid="uid://n5ftbeu3taa2" path="res://script/coin.gd" id="1_6qxui"]
[ext_resource type="Texture2D" uid="uid://by1lwoolytm2w" path="res://sprite/coins.png" id="1_ervcb"]
[ext_resource type="AudioStream" uid="uid://sytrfv5uaavu" path="res://sounds/coin.wav" id="3_3ogj1"]
[ext_resource type="PackedScene" uid="uid://cixj1ykvju5v2" path="res://scenes/brick.tscn" id="4_d14el"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_povfb"]
size = Vector2(10, 14)

[sub_resource type="Animation" id="Animation_el3ql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Coins:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Coins:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.18, 0, 0.18, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Coins:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rwwey"]
resource_name = "collect"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Coins:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.36),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Coins:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 1, 1),
"points": PackedFloat32Array(-9, 0, 0, 0, 0, -46.84, -0.1, 0, 0.1, 0, -13, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3, 0.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Coins:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.16666667, 0.26666668, 0.36666667, 0.46666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [3, 4, 5, 6, 3, 4]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.33333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_11l1o"]
resource_name = "idle"
length = 1.1667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Coins:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6333333, 0.6666667, 0.8333334, 0.86666673, 1, 1.0333333, 1.1333334, 1.1666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 0, 0, 1, 1, 2, 2, 1, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bbffo"]
_data = {
&"RESET": SubResource("Animation_el3ql"),
&"collect": SubResource("Animation_rwwey"),
&"idle": SubResource("Animation_11l1o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11l1o"]

[node name="coin" type="Node2D"]
script = ExtResource("1_6qxui")

[node name="coin_area" type="Area2D" parent="."]

[node name="coin_area_shape" type="CollisionShape2D" parent="coin_area"]
shape = SubResource("RectangleShape2D_povfb")

[node name="Coins" type="Sprite2D" parent="."]
texture = ExtResource("1_ervcb")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bbffo")
}
autoplay = "idle"

[node name="coin_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3ogj1")

[node name="edible" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="edible"]
scale = Vector2(1.7180809, 1.7180809)
shape = SubResource("RectangleShape2D_11l1o")

[node name="brick" parent="." instance=ExtResource("4_d14el")]
visible = false
position = Vector2(16, -8)

[node name="brick2" parent="." instance=ExtResource("4_d14el")]
visible = false
position = Vector2(16, -24)

[connection signal="area_entered" from="coin_area" to="." method="_on_coin_area_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="coin_sound" to="." method="_on_coin_sound_finished"]
